2006-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/data-put:
	  fix server to upload to
	* src/htdocs/news/news.xml:
	  add news about gst-python 0.8.4

2006-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-python/0.8.4.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	  about to release a 0.8.4 of gst-python

2006-03-06  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/page.xsl:
	  Add some space on the right content side 

2006-02-24  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add more milestones.

2006-02-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/news/news.xml:
	Grrr, fix my links.

2006-02-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/news/news.xml:
	Add news item for the release

2006-02-20  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gst-plugins-bad/0.10.1.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.10.2.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	Release gst-plugins-bad 0.10.1 and gst-plugins-ugly 0.10.2

2006-02-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins/0.8.12.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	* src/htdocs/releases/gstreamer/0.8.12.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  Release gstreamer 0.8.12 "Cookies" and gst-plugins 0.8.12 "Ravage".

2006-02-09  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.3.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.2.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	Release gst-plugins-base 0.10.3 and gst-plugins-good 0.10.2

2006-02-08  Jan Schmidt  <thaytan@mad.scientist.com>
