@@ -1,0 +1,229 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-plugins-base</module>
+  <module-fancy>GStreamer Base Plug-ins</module-fancy>
+  <name>Power</name>
+  <version>0.10.4</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+GStreamer Base Plug-ins.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+
+<p>
+This module contains a set of reference plugins, base classes for other
+plugins, and helper libraries.
+
+This module is kept up-to-date together with the core developments.  Element
+writers should look at the elements in this module as a reference for
+their development.
+
+This module contains elements for, among others:
+<ul>
+  <li>device plugins: x(v)imagesink, alsa, v4lsrc, cdparanoia</li>
+  <li>containers: ogg</li>
+  <li>codecs: vorbis, theora</li>
+  <li>text: textoverlay, subparse</li>
+  <li>sources: audiotestsrc, videotestsrc, gnomevfssrc</li>
+  <li>network: tcp</li>
+  <li>typefind</li>
+  <li>audio processing: audioconvert, adder, audiorate, audioscale, volume</li>
+  <li>visualisation: libvisual</li>
+  <li>video processing: ffmpegcolorspace</li>
+  <li>aggregate elements: decodebin, playbin</li>
+</ul>
+
+Other modules containing plug-ins are:
+
+<dl>
+<dt>gst-plugins-good</dt>
+<dd>contains a set of well-supported plug-ins under our preferred license</dd>
+<dt>gst-plugins-ugly</dt>
+<dd>contains a set of well-supported plug-ins, but might pose problems for
+    distributors</dd>
+<dt>gst-plugins-bad</dt>
+<dd>contains a set of less supported plug-ins that haven't passed the
+    rigorous quality testing we expect</dd>
+</dl>
+
+</p>
+  </intro>
+  <features>
+    <feature>Parallel installability with 0.8.x series</feature>
+    <feature>Threadsafe design and API</feature>
+
+    <feature>(Experimental) QoS support</feature>
+    <feature>oggmuxer now creates 100% valid streams for Theora, Vorbis and Speex</feature>
+    <feature>documentation updates</feature>
+    <feature>better support for subtitles (seeking)</feature>
+  </features>
+
+  <applications>
+  </applications>
+      <contributors>
+	<person>Andy Wingo</person>
+	<person>Christophe Fergeau</person>
+	<person>Edward Hervey</person>
+	<person>Fabrizio Gennari</person>
+	<person>Jan Schmidt</person>
+	<person>Julien MOUTTE</person>
+	<person>Mathieu Garcia</person>
+	<person>Michael Smith</person>
+	<person>Sebastien Moutte</person>
+	<person>Stefan Kost</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Tim-Philipp Müller</person>
+	<person>Tommi Myöhänen</person>
+	<person>Wim Taymans</person>
+  </contributors>
+
+
+
+  <api>
+    <additions>
+      <item>GstTextOverlay::halignment</item>
+      <item>GstTextOverlay::valignment</item>
+    </additions>
+<!--
+    <depreciations>
+    </depreciations>
+-->
+  </api>
+
+  
+
+  
+
+  <bugs>
+    <bug>
+      <id>310202</id>
+      <summary>[subtitles] &lt; i &gt;  &lt; /i &gt; tags and others should be supported i...</summary>
+    </bug>
+    <bug>
+      <id>312439</id>
+      <summary>XVideo output doesn't work on remote displays (probably r...</summary>
+    </bug>
+    <bug>
+      <id>321271</id>
+      <summary>audio output is truncated at EOS</summary>
+    </bug>
+    <bug>
+      <id>321650</id>
+      <summary>Can't decode this ogm file</summary>
+    </bug>
+    <bug>
+      <id>325732</id>
+      <summary>[oggdemux] problem when seeking to time less than 4s with...</summary>
+    </bug>
+    <bug>
+      <id>325972</id>
+      <summary>[typefinding] doesn't recognise this mp3</summary>
+    </bug>
+    <bug>
+      <id>326720</id>
+      <summary>[alsasink] doesn't support more than 2 channels anymore</summary>
+    </bug>
+    <bug>
+      <id>330711</id>
+      <summary>[ffmpegcolorspace] problems with palettized RGB (fencount...</summary>
+    </bug>
+    <bug>
+      <id>330789</id>
+      <summary>gstbaseaudiosink causes noise on seeking</summary>
+    </bug>
+    <bug>
+      <id>330888</id>
+      <summary>Fix build with gcc 2.95 (again)</summary>
+    </bug>
+    <bug>
+      <id>331295</id>
+      <summary>gnomevfssink doesn't respect umask when creating files</summary>
+    </bug>
+    <bug>
+      <id>331526</id>
+      <summary>3GP type detection is too simple</summary>
+    </bug>
+    <bug>
+      <id>331678</id>
+      <summary>Decodebin is not reusable within a single pipeline (as in...</summary>
+    </bug>
+    <bug>
+      <id>331690</id>
+      <summary>playbin won't play my last.fm stream</summary>
+    </bug>
+    <bug>
+      <id>331763</id>
+      <summary>[alsamixer] unmute sets the volume to 100%</summary>
+    </bug>
+    <bug>
+      <id>331765</id>
+      <summary>[alsamixer] mixer applet slider doesn't want to move from...</summary>
+    </bug>
+    <bug>
+      <id>331903</id>
+      <summary>[videorate] doesnt handle input caps of framerate=0/1 sanely</summary>
+    </bug>
+    <bug>
+      <id>332778</id>
+      <summary>[ogmparse] &quot; Already an existing pad &quot; WARNING</summary>
+    </bug>
+    <bug>
+      <id>332964</id>
+      <summary>random crashes in mp3_type_find</summary>
+    </bug>
+    <bug>
+      <id>333254</id>
+      <summary>theora encoder does not set IN_CAPS flag properly</summary>
+    </bug>
+    <bug>
+      <id>333352</id>
+      <summary>[gnomevfssink] reports disk full as generic error</summary>
+    </bug>
+    <bug>
+      <id>333488</id>
+      <summary>Allow for palette &lt; 256 colours in AVI files</summary>
+    </bug>
+    <bug>
+      <id>333510</id>
+      <summary>[PATCH] Fix gst_pad_new_from_template (gst_static_pad_tem...</summary>
+    </bug>
+    <bug>
+      <id>333545</id>
+      <summary>[riff] set depth on wma caps to make asfdemux and pitfdll...</summary>
+    </bug>
+    <bug>
+      <id>333663</id>
+      <summary>[patch] unref the result of gst_pad_get_parent</summary>
+    </bug>
+    <bug>
+      <id>333900</id>
+      <summary>[typefind] cannot play a particular mp3 file</summary>
+    </bug>
+    <bug>
+      <id>334112</id>
+      <summary>variable not initialized</summary>
+    </bug>
+    <bug>
+      <id>334129</id>
+      <summary>Disable frame dropping for now</summary>
+    </bug>
+    <bug>
+      <id>317038</id>
+      <summary>use default channel layout if none is specified in multic...</summary>
+    </bug>
+    <bug>
+      <id>319340</id>
+      <summary>[cdparanoia] uncorrected-error signal never fired</summary>
+    </bug>
+  </bugs>
+
+</release>
