@@ -1,4 +1,4 @@
-releases = 0.10.3 0.10.2 0.10.1 0.10.0 0.9.7 0.9.6 0.9.5 \
+releases = 0.10.4 0.10.3 0.10.2 0.10.1 0.10.0 0.9.7 0.9.6 0.9.5 \
 	0.9.1 0.9.2 0.9.3 0.9.4
 
 built_pages = \
