@@ -1,3 +1,12 @@
+2006-03-10  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* src/htdocs/news/news.xml:
+	* src/htdocs/releases/gst-plugins-base/0.10.4.xml:
+	* src/htdocs/releases/gst-plugins-base/Makefile.am:
+	* src/htdocs/releases/gstreamer/0.10.4.xml:
+	* src/htdocs/releases/gstreamer/Makefile.am:
+	  releasing
+
 2006-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* bin/data-put:
